# substrate-node-template

./: .gitmodules  customSpec.json  customSpecRaw.json  insert_key_body.json
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  tests.rs
pallets/test-pallet/: Cargo.toml
pallets/test-pallet/src/: tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
