[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'test-pallet'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# external dependencies
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}

# Substrate dependencies
frame-support = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
frame-system = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
sp-io = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
sp-runtime = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}

[features]
# Defines a feature named `default` that enables `std` feature on all dependencies (unless they opt out by specifying default-features=false)

# With this feature defined, cfg expressions can be used to conditionally include code to support the requested feature at compile time: #![cfg_attr(not(feature = "std"), no_std)]
default = ['std']
# Features of dependencies can also be enabled in the [features] table. The syntax is "package-name/feature-name". For example:
std = [
    # Enables std by enabling the "std" feature of codec.
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
